# data-processing

./: .env  Makefile  docker-compose.yml  pyproject.toml
src/basic/: abc_class.py  class_learning.py  decorators.py  hello.py  pandas_learning.py  pandas_learning2.py  type_safety.py
src/enterprise_pipeline_project/: run_pipeline.py
src/enterprise_pipeline_project/data/: customers.csv  order_items.csv  orders.csv  payments.csv  returns.csv
src/enterprise_pipeline_project/pipeline/: config.py  extract.py  load.py  metrics.py  quality.py  tranform.py
src/project/: run.py
src/project/data/: customers.csv  products.csv
