[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2", # Rest endpoint framework
    "gunicorn>=23.0.0",
    "numpy>=2.3.5", # c language based high performance array processing library
    "oracledb>=3.4.1",
    "pandas>=2.3.3", # Data processing library
    "pydantic>=2.12.5", # you can define data types and validate data easily
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45", # ORM
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
